# libonionshare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: onionshare.h
licenses/: readme.txt
src/cli/: main.c
src/lib/: chat_service.c  mongoose.h  onionshare.c  services.c  services.h  templates.cpp  templates.h
src/lib/include/: inja.hpp
src/lib/resources/static/js/: chat.js
src/lib/resources/templates/: chat.html
test/: test.c
